# study_fast-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 4ceb2ccd85c9_create_users_table.py  5027896a6101_add_updated_at_to_users.py  78155c57fc6b_add_column_updated_at_to_table_users.py
src/: app.py  models.py  schemas.py
test/: conftest.py  test_app.py  test_db.py
