[project]
name = "study-fast-api"
version = "0.1.0"
description = "Study FastAPI"
authors = [
    {name = "annegl"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "mkdocs-glightbox (>=0.5.2,<0.6.0)",
    "mkdocs-video (>=1.5.0,<2.0.0)",
    "mkdocs-git-authors-plugin (>=0.10.0,<0.11.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.5.0,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "mkdocs-exclude (>=1.0.2,<2.0.0)",
    "mkdocs-exclude-unused-files (>=1.4.1,<2.0.0)",
    "mkdocs-macros-plugin (>=1.5.0,<2.0.0)",
    "mkdocs-quiz (>=1.3.0,<2.0.0)",
    "towncrier (>=25.8.0,<26.0.0)",
    "mkdocs-towncrier (>=0.1.5,<0.2.0)",
    "markdown-exec[ansi] (>=1.12.1,<2.0.0)",
    "mike (>=2.1.3,<3.0.0)",
    "mkdocs-simple-hooks (>=0.1.5,<0.2.0)",
    "click (==8.2.1)",
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "pre-commit>=4.2.0",
    "invoke (>=2.2.1,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "typos (>=1.40.0,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.taskipy.tasks]
serve = {cmd="mkdocs serve --dev-addr localhost:8080", help="Executes mkdocs' local server"}
mserve = {cmd="mike serve --dev-addr localhost:8080", help="Executes mkdocs' local server via mike"}
deploy = {cmd="mike deploy estavel --push --allow-empty", help="Deploys to production using mike"}
slides = {cmd="marp -I slides/brutos --html --theme slides/brutos/rose-pine.css --allow-local-files -o slides/html", help="Generates slides in html"}

[tool.ruff]
line-length=120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "_pypackages_",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "cdk.out",
    "*.json",
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.towncrier]
directory = "changelogs"
filename = "CHANGELOG.md"
issue_format = '[#{issue}](https://github.com/annegl/study_fast-api/issues/{issue})'

[[tool.towncrier.type]]
directory = "adicionado"
name = "Adicionado"
showcontent = true

[[tool.towncrier.type]]
directory = "correcoes"
name = "Correções"
showcontent = true

[[tool.towncrier.type]]
directory = "alterado"
name = "Alterado"
showcontent = true

[[tool.towncrier.type]]
directory = "removido"
name = "Removido"
showcontent = true

[[tool.towncrier.type]]
directory = "atualizacoes"
name = "Atualizações"
showcontent = true

[[tool.towncrier.type]]
directory = "interno"
name = "Interno"
showcontent = true

[[tool.towncrier.type]]
directory = "slides"
name = "Slides"
showcontent = true

[tool.uv.workspace]
members = [
    "src",
]

