[project]
name = "study-fast-api"
version = "0.1.0"
description = "Study FastAPI"
authors = [
    {name = "annegl"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<1.0.0)",
    "SQLAlchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff (>=0.14.10,<0.15.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
]

[tool.taskipy.tasks]
run = {cmd="fastapi dev src/app.py", help="Runs FastAPI app"}
test = {cmd="pytest -s -x --cov=src -vv", help="Runs tests with coverage"}
format = {cmd="ruff format && ruff check --fix", help="Fixes Python linting issue and reformats code to match a standard style"}


[tool.ruff]
line-length=79
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "_pypackages_",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "cdk.out",
    "*.json",
    "*migrations/*"
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811', 'ERA001']

[tool.ruff.lint.isort]
no-sections = true

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "test-reports"
title = "Test Coverage Report"


